...
            title="Sign Up"
            onPress={() => navigation.navigate('Signup')}
            testID="button-sign-up"
          />

          <BubbleButton
            title="Log In"
            variant="outline"
            onPress={() => navigation.navigate('Login')}
            testID="button-log-in"
          />
        </View>
      </View>
...
